@@ -7,6 +7,7 @@
 - Units takes time to be trained (according to their unit description)
 - Render different building state according to construction ETA
 - Building in construction can be canceled
+- Render progress bar for unit training and building construction
 ===============================================================================
 
 ===============================================================================
